--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar{
-    background-color: #060b26;
+    background-color: #000000;
     height : 80px;
     display: flex;
     justify-content: start;
@@ -13,7 +13,7 @@
 }
 
 .nav-menu {
-    background-color: #060b26;
+    background-color: #000000;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -33,25 +33,26 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 8px 0px 8px 16px;
+    padding: 7px 0px;
     list-style: none;
-    height: 60px;
+    height: 65px;
 }
 
 .nav-text a {
     text-decoration: none;
     color: #f5f5f5;
     font-size: 18px;
-    width: 95%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     padding: 0 16px;
-    border-radius: 4px;
 }
 
 .nav-text a:hover{
-    background-color: #1a83ff;
+    background-color: #FFC600;
+    color: #000000;
+    font-weight: bold;
 }
 
 .nav-menu-items{
@@ -60,7 +61,7 @@
 }
 
 .navbar-toggle{
-    background-color: #060b26;
+    background-color: #000000;
     width: 100%;
     height: 80px;
     display: flex;
