--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -1,3 +1,78 @@
 body{
     background-image: url('./Imagens/fundo-branco.jpg');
 }
+
+.main-login{
+    width: 100vw;
+    height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.esqueda-login{
+    width: 50vw;
+    height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.direita-login{
+    width: 50vw;
+    height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-login{
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 35px;
+    
+}
+
+.card-login > h1{
+    font-weight: 800;
+    margin: 0;
+}
+
+.campo-texto{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.campo-texto > input{
+    width: 100%;
+    border:solid;
+    border-width: 1px;
+    border-color: #3a3a3a9f;
+    border-radius: 10px;
+    padding: 15px;
+    font-size: 11pt;
+    outline: none;
+    box-sizing: border-box;
+    
+}
+
+.botao-login{
+    width: 100%;
+    padding: 16px 0px;
+    margin: 25px;
+    border:solid;
+    border-width: 1px;
+    border-color: #3a3a3a9f;
+    border-radius: 10px;
+    outline: none;
+    font-size: 12pt;
+    background: #fce91b;
+    font-weight: 800;
+    cursor: pointer;
+}
