--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -10,39 +10,45 @@ body{
     align-items: center;
 }
 
-.esqueda-login{
-    width: 50vw;
+.esquerda-login{
+    width: 60vw;
     height: 100vh; 
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
 }
 
+
+
 .direita-login{
-    width: 50vw;
+    width: 40vw;
     height: 100vh; 
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .card-login{
-    width: 50vw;
+    height: 70vh;
+    border-left:solid;
+    border-width: 2px;
+    width: 25vw;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 30px 35px;
-    
+    padding: 0px 35px;
+    margin-bottom: 50px;
 }
 
 .card-login > h1{
     font-weight: 800;
-    margin: 0;
+    margin: 0px 0px 50px 0px;
 }
 
 .campo-texto{
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -59,20 +65,73 @@ body{
     font-size: 11pt;
     outline: none;
     box-sizing: border-box;
-    
+    margin-top: 10px;
 }
 
 .botao-login{
-    width: 100%;
+    width: 80%;
     padding: 16px 0px;
     margin: 25px;
-    border:solid;
-    border-width: 1px;
-    border-color: #3a3a3a9f;
+    border:none;
     border-radius: 10px;
     outline: none;
     font-size: 12pt;
     background: #fce91b;
     font-weight: 800;
     cursor: pointer;
+}
+
+.texto1{
+    font-size: 17pt;
+    margin: 100px 100px 0px 00px;
+}
+
+.baixo-esquerda{
+    display: flex;
+    justify-content: center;
+    align-items: start;  
+    margin: 0px 0px 100px 130px;
+}
+
+h2 {   
+    font-weight: 200;
+}
+
+.texto2{
+    font-size: 17pt;
+    font-weight: 275;
+    line-height:2em;
+    margin: 90px 50px 0px 0px;
+    padding-right: 100px;
+}
+
+.carteira{
+    width: 30vw;
+    margin: 50px 50px 0px 0px;
+}
+
+.botao-esqueceu-senha{
+    padding: 5px 0px 0px 200px;
+    border:none;
+    background: none;
+    outline: none;
+    font-size: 11pt;
+    font-weight: 900;
+    cursor: pointer;
+}
+
+.card-login > h3{
+    margin-top: 50px;
+    font-weight: 200;
+    font-size: 16pt;
+}
+
+.botao-criar-conta{
+    border:none;
+    background: none;
+    outline: none;
+    font-size: 18pt;
+    font-weight: 900;
+    cursor: pointer;
+    text-decoration: underline;
 }
