--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -1,10 +1,26 @@
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 15%;
+    top: 0px;
+    background: linear-gradient(89.98deg, rgba(0, 0, 0, 0.52) 0.59%, rgba(0, 0, 0, 0.696) 25.96%, rgba(0, 0, 0, 0.8) 49.96%, rgba(0, 0, 0, 0.696) 74.62%, rgba(0, 0, 0, 0.52) 99.98%);
+}
+
+.logo{  
+    margin-top: 0.8vh;
+    height: 100%; 
+}
+
 body{
     background-image: url('../../shared/images/fundo-branco.jpg');
 }
 
 .main-login{
     width: 100vw;
-    height: 100vh; 
+    height: 91vh; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,7 +28,7 @@ body{
 
 .esquerda-login{
     width: 60vw;
-    height: 100vh; 
+    height: 60vh; 
     display: flex;
     justify-content: start;
     align-items: center;
@@ -21,22 +37,23 @@ body{
 
 .direita-login{
     width: 40vw;
-    height: 100vh; 
+    height: 80vh; 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .card-login{
-    height: 70vh;
+    height: 60vh;
     border-left:solid;
     border-width: 2px;
     width: 25vw;
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 30px 0px 30px 70px;
-    margin-bottom: 50px;
+    padding: 30px 0px 0px 70px;
+    margin-top: 20%;
+    overflow:hidden;
 }
 
 .card-login > h1{
@@ -84,9 +101,10 @@ body{
 }
 
 .baixo-esquerda{
+    width: 50vw;
     display: flex;
-    justify-content: center;
-    align-items: start;  
+    justify-content:start;
+    align-items: center;  
     margin: 0px 0px 100px 0px;
 }
 
@@ -95,26 +113,32 @@ h2 {
 }
 
 .texto2{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: start; 
+    flex-direction: column;
     font-size: 17pt;
     font-weight: 275;
     line-height:2em;
-    margin: 90px 50px 0px 0px;
+    margin: 90px 30px 0px 50px;
     padding-right: 100px;
 }
 
 .carteira{
-    width: 27vw;
-    margin: 50px 50px 0px 0px;
+    width: 25vw;
+    margin: 50px 50px 0px 50px;
 }
 
 .botao-esqueceu-senha{
-    padding: 5px 0px 0px 200px;
+    padding-top: 5px;
     border:none;
     background: none;
     outline: none;
     font-size: 11pt;
     font-weight: 900;
     cursor: pointer;
+    margin-left: 50%;
 }
 
 .card-login > h3{
