--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -1,4 +1,4 @@
-.header{
+.header-login{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,10 +6,10 @@
     width: 100%;
     height: 15%;
     top: 0px;
-    background: linear-gradient(89.98deg, rgba(0, 0, 0, 0.52) 0.59%, rgba(0, 0, 0, 0.696) 25.96%, rgba(0, 0, 0, 0.8) 49.96%, rgba(0, 0, 0, 0.696) 74.62%, rgba(0, 0, 0, 0.52) 99.98%);
+    background: linear-gradient(89.98deg, rgba(0, 0, 0, 0.65) 0.59%, rgba(0, 0, 0, 0.87) 25.96%, #000000 49.96%, rgba(0, 0, 0, 0.87) 74.62%, rgba(0, 0, 0, 0.65) 99.98%);
 }
 
-.logo{  
+.logo-login{  
     margin-top: 0.8vh;
     height: 100%; 
 }
@@ -27,16 +27,17 @@ body{
 }
 
 .esquerda-login{
-    width: 60vw;
+    width: 50vw;
     height: 60vh; 
     display: flex;
     justify-content: start;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
+    margin-left: 7%;
 }
 
 .direita-login{
-    width: 40vw;
+    width: 50vw;
     height: 80vh; 
     display: flex;
     justify-content: center;
@@ -47,7 +48,7 @@ body{
     height: 60vh;
     border-left:solid;
     border-width: 2px;
-    width: 25vw;
+    width: 20vw;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -62,7 +63,7 @@ body{
 }
 
 .campo-texto{
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -101,11 +102,10 @@ body{
 }
 
 .baixo-esquerda{
-    width: 50vw;
+    width: 60vw;
     display: flex;
     justify-content:start;
     align-items: center;  
-    margin: 0px 0px 100px 0px;
 }
 
 h2 {   
@@ -121,13 +121,12 @@ h2 {
     font-size: 17pt;
     font-weight: 275;
     line-height:2em;
-    margin: 90px 30px 0px 50px;
-    padding-right: 100px;
+    margin-bottom: 150px;
 }
 
 .carteira{
     width: 25vw;
-    margin: 50px 50px 0px 50px;
+    margin: 50px 0px 0px 90px;
 }
 
 .botao-esqueceu-senha{
@@ -138,7 +137,6 @@ h2 {
     font-size: 11pt;
     font-weight: 900;
     cursor: pointer;
-    margin-left: 50%;
 }
 
 .card-login > h3{
