--- a/src/Pages/registration/registration.css
+++ b/src/Pages/registration/registration.css
@@ -1,4 +1,4 @@
-.header{
+.header-cadastro{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,10 +6,10 @@
     width: 100%;
     height: 15%;
     top: 0px;
-    background: linear-gradient(89.98deg, rgba(0, 0, 0, 0.52) 0.59%, rgba(0, 0, 0, 0.696) 25.96%, rgba(0, 0, 0, 0.8) 49.96%, rgba(0, 0, 0, 0.696) 74.62%, rgba(0, 0, 0, 0.52) 99.98%);
+    background: linear-gradient(89.98deg, rgba(0, 0, 0, 0.65) 0.59%, rgba(0, 0, 0, 0.87) 25.96%, #000000 49.96%, rgba(0, 0, 0, 0.87) 74.62%, rgba(0, 0, 0, 0.65) 99.98%);
 }
 
-.logo{  
+.logo-cadastro{  
     margin-top: 0.8vh;
     height: 100%; 
 }
