--- a/src/Pages/registration/registration.css
+++ b/src/Pages/registration/registration.css
@@ -27,11 +27,54 @@
     width: 40vw;
     height: 72vh;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     background: #b2b2b2a2;
     border:none;
     border-radius: 15px;
-    outline: none;
     flex-direction: column;    
+}
+
+.texto-e-input{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content:center ;
+}
+
+.texto-e-input > label{
+    font-size: 13pt;
+    font-weight: 600;
+    margin-bottom: 2px;
+    margin-left: 4px;
+}
+.texto-e-input > input{
+    width: 100%;
+    border:solid;
+    border-width: 1px;
+    border-color: #3a3a3a9f;
+    border-radius: 10px;
+    padding: 15px;
+    font-size: 12pt;
+    outline: none;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+}
+
+.container-cadastro > h1{
+    margin: 5% 0px;
+}
+
+.botao-cadastrar{
+    width: 50%;
+    padding: 16px 0px;
+    margin: 25px;
+    border:none;
+    border-radius: 10px;
+    outline: none;
+    font-size: 12pt;
+    background: #fce91b;
+    font-weight: 800;
+    cursor: pointer;
 }
