--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -139,7 +139,7 @@ h2 {
     cursor: pointer;
 }
 
-.card-login > h3{
+.sem-conta{
     margin-top: 50px;
     font-weight: 200;
     font-size: 16pt;
