registrar conta envia para o cadastro

--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -157,6 +157,7 @@ body{
     font-size: 18pt;
     font-weight: 900;
     cursor: pointer;
+    color: inherit;
     text-decoration: underline;
 }
 
