--- a/src/Pages/add-investment/add-investment.css
+++ b/src/Pages/add-investment/add-investment.css
@@ -12,10 +12,29 @@
     height: 72vh;
     display: flex;
     justify-content:flex-start;
-    align-items: center;
+    align-items:flex-start;
     background: #b2b2b2a2;
     border:none;
     border-radius: 15px;
     outline: none;
     flex-direction: row; 
+}
+
+.investment-options > button{
+    color: #ffffff;
+    width: 50%;
+    padding: 16px 0px;
+    margin:20px 10px 0px 10px;
+    border:none;
+    border-radius: 10px;
+    outline: none;
+    font-size: 13pt;
+    background: #000000;
+    font-weight: 800;
+    cursor: pointer;
+}
+
+.investment-options > button:hover{
+    background-color: #FFC600;
+    color: #000000;
 }
