--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -5,7 +5,9 @@
 }
 
 .nav-menu-items {
-    padding: 0;
+    padding-left: 15px;
+    width: 100%;
+    
 }
 
 .navbar{
@@ -24,7 +26,7 @@
 
 .nav-menu {
     background-color: #000000;
-    width: 270px;
+    width: 320px;
     height: 100vh;
     display: flex;
     position: fixed;
@@ -44,7 +46,6 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 5px;
     list-style: none;
     height: 70px;
     margin: 0;
@@ -73,10 +74,6 @@
     color: #000000;
 } */
 
-.nav-menu-items{
-    width: 100%;
-}
-
 .navbar-toggle{
     background-color: #000000;
     width: 100%;
@@ -92,5 +89,13 @@ span{
 
 .logo-aurum{
     width: 6vw;
-    margin: 2em 0 1em 0;
+    margin: 4em 0 ;
+}
+
+#account.nav-text{
+    margin-top: 80%;
+    height: 55px;
+}
+#logout.nav-text{
+    height: 55px;
 }
