--- a/src/Pages/account/account.css
+++ b/src/Pages/account/account.css
@@ -21,8 +21,9 @@
 }
 
 .h1-meus-dados{
-    font-size: 2em;
-    margin: 12% 0px 8% 0px;
+    font-size: 2.1em;
+    font-weight: 700;
+    margin: 9% 0px 6% 0px;
 }
 
 .texto-e-input-md{
