--- a/src/Pages/account/account.css
+++ b/src/Pages/account/account.css
@@ -7,7 +7,7 @@
 }
 
 .container-dados{
-    margin:0px 0px 0px 14%;
+    margin:0px 0px 0px 320px;
     width: 40vw;
     height: 72vh;
     display: flex;
