--- a/src/Pages/add-investment/add-investment.css
+++ b/src/Pages/add-investment/add-investment.css
@@ -8,7 +8,7 @@
 
 .investment-options {
     padding: 20px;
-    margin:0px 0px 0px 14%;
+    margin:0px 0px 0px 320px;
     width: 40vw;
     height: 72vh;
     display: flex;
