--- a/src/Pages/simulate-investment/simulate.css
+++ b/src/Pages/simulate-investment/simulate.css
@@ -13,7 +13,7 @@
 }
 
 .container-si {
-    margin: 0px 0px 0px 14%;
+    margin: 0px 0px 0px 320px;
     width: 40vw;
     height: 72vh;
     display: flex;
