--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -1,58 +1,119 @@
 .main-home {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 100vw;
-    height: 100vh;
-    flex-direction: column;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
 }
 
-.container-cima{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 80vw;
-    height: 35vh;
-    margin: 0px 0px 10px 345px;
-    background-color:#aaaaaa;
+.container-cima {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 80vw;
+  height: 35vh;
+  margin: 0px 0px 10px 345px;
+  background-color: #aaaaaa;
 }
 
-.container-meio{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 80vw;
-    height: 32vh;
-    margin: 10px 0px 10px 345px;
-    background-color:#aaaaaa;
+.container-meio {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 80vw;
+  height: 32vh;
+  margin: 10px 0px 10px 345px;
 }
 
-.container-meio-esquerda{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 100%;
-    width: 40%;
-    background-color:#64979e;
-
+.container-meio-esquerda {
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 40%;
 }
 
-.container-meio-direita{
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 100%;
-    width: 60%;
-    background-color:#aaaa8e;
-
+.container-meio-direita {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 100%;
+  width: 60%;
+  background-color: #aaaa8e;
 }
 
-.container-baixo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-    height: 26vh;
-    margin: 10px 0px 0px 345px;
-    background-color:#aaaaaa;
+.container-baixo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80vw;
+  height: 26vh;
+  margin: 10px 0px 0px 345px;
+}
+
+.container-baixo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80vw;
+  height: 26vh;
+  margin: 10px 0px 0px 345px;
+}
+
+.single-news-home {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  margin-left: 10px;
+}
+
+.carousel-slide {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 100%;
+}
+
+.image-home {
+  width: 100%;
+  height: 250px;
+}
+
+.img-news-home {
+  width: 100%;
+  height: 100%;
+}
+
+.text-home {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(0, 0, 0, 0.61);
+  border-radius: 5px;
+  color: #ffffff;
+  position: absolute;
+  bottom: 15%;
+  text-align: center;
+  width: 70%;
+}
+
+.news-title-home {
+  font-size: 31px;
+  font-weight: 600;
+  color: #ffffff;
+}
+
+.carousel-inner {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-control-next-icon {
+  width: 3rem;
+  height: 3rem;
 }
