--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -1,3 +1,6 @@
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MAIN  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .main-home {
   display: flex;
   justify-content: flex-start;
@@ -7,6 +10,9 @@
   flex-direction: column;
 }
 
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  CIMA  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-cima {
   display: flex;
   justify-content: flex-start;
@@ -17,6 +23,14 @@
   background-color: #aaaaaa;
 }
 
+#area-chart-home {
+  width: 100%;
+  height: 100%;
+}
+
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-meio {
   display: flex;
   justify-content: flex-start;
@@ -26,6 +40,9 @@
   margin: 10px 0px 10px 345px;
 }
 
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO ESQUERDA  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-meio-esquerda {
   padding-top: 20px;
   display: flex;
@@ -35,6 +52,9 @@
   width: 40%;
 }
 
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO DIREITA ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-meio-direita {
   display: flex;
   justify-content: flex-start;
@@ -44,15 +64,9 @@
   background-color: #aaaa8e;
 }
 
-.container-baixo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80vw;
-  height: 26vh;
-  margin: 10px 0px 0px 345px;
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  BAIXO ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
 }
-
 .container-baixo {
   display: flex;
   justify-content: center;
@@ -116,7 +130,7 @@
   font-weight: 600;
   color: #ffffff;
   text-align: justify;
-  text-shadow: rgb(206, 205, 161) 0.1em 0.1em 0.3em;
+  text-shadow: rgb(235, 234, 225) 0.1em 0.1em 0.3em;
 }
 
 .carousel-inner {
