--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -17,13 +17,14 @@
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 80vw;
-  height: 35vh;
-  margin: 0px 0px 10px 345px;
-  background-color: #aaaaaa;
+  width: 71.5vw;
+  height: 32vh;
+  margin: 30px 0px 0px 430px;
+  background: #d9d9d9b3;
 }
 
 #area-chart-home {
+  margin: 10px 0px 0px 15px;
   width: 100%;
   height: 100%;
 }
@@ -57,10 +58,11 @@
 }
 .container-meio-direita {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  height: 100%;
-  width: 60%;
+  justify-content: center;
+  align-items: center;
+  height: 89%;
+  width: 55%;
+  margin: 17px 0;
   background-color: #aaaa8e;
 }
 
