--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -50,7 +50,8 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  width: 40%;
+  width: 30%;
+  margin: 5px 0px 0px 80px;
 }
 
  {
@@ -60,12 +61,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 89%;
-  width: 55%;
-  margin: 17px 0;
-  background-color: #aaaa8e;
+  height: 90%;
+  width: 57.7%;
+  background: #d9d9d9b3;
+  margin: 20px 0px 0px 30px;
 }
 
+#area-chart2-home {
+  margin: 00px 0px 0px 20px;
+  width: 100%;
+  height: 100%;
+}
  {
   /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  BAIXO ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
 }
