--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -20,7 +20,8 @@
   width: 71.5vw;
   height: 32vh;
   margin: 30px 0px 0px 430px;
-  background: #d9d9d9b3;
+  background: #b6b6b6b3;
+  border-radius: 15px;
 }
 
 #area-chart-home {
@@ -63,8 +64,9 @@
   align-items: center;
   height: 90%;
   width: 57.7%;
-  background: #d9d9d9b3;
+  background: #0c103a;
   margin: 20px 0px 0px 30px;
+  border-radius: 15px;
 }
 
 #area-chart2-home {
